--- a/src/resources/views/admin/nhan_vien/nhanVien.ejs
+++ b/src/resources/views/admin/nhan_vien/nhanVien.ejs
@@ -10,8 +10,7 @@
                             Thêm nhân viên
                         </button>
                         <% } else { %>
-                            <button type="button" class="btn btn-outline-primary mt-2 mx-2" data-bs-toggle="modal"
-                                data-bs-target="#staticBackdrop" disabled>
+                            <button type="button" class="btn btn-outline-primary mt-2 mx-2" disabled>
                                 Thêm nhân viên
                             </button>
                             <% } %>
