--- a/src/resources/views/admin/bao_cao/bao_cao.ejs
+++ b/src/resources/views/admin/bao_cao/bao_cao.ejs
@@ -2,7 +2,22 @@
     <%- include('../aside.ejs') %>
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
+            <div class="row">
+                <div class="col-md-6">
 
+                </div>
+                <div class="col-md-6 mt-2 ">
+                    <form action="/admin/search_baocao" id="combined-form" method="get" class="sidebar-form_1 mx-2">
+                        <div class="input-group mb-3" style="width: 80%;">
+                            <input type="text" name="name" class="form-control"
+                                placeholder="Nhập sản phẩm bạn muốn tìm kiếm" aria-label="Recipient's username"
+                                aria-describedby="button-addon2">
+                            <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i
+                                    class="fa fa-search"></i></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
             <table style="margin-top: 50px;" class="table table-PW table-hover table-borderless align-middle">
                 <thead class="table-light">
                     <caption> Báo cáo sản phẩm</caption>
