--- a/src/resources/views/admin/bao_cao/bao_cao.ejs
+++ b/src/resources/views/admin/bao_cao/bao_cao.ejs
@@ -28,6 +28,7 @@
                         <th>Màu sắc</th>
                         <th>Dung lượng</th>
                         <th>Số lượng nhập</th>
+                        <th>SL đang giao</th>
                         <th>Số lượng bán</th>
                         <th>Số lượng còn lại</th>
                     </tr>
@@ -54,6 +55,10 @@
                                 </td>
                                 <td>
                                     <%= bao_cao.so_luong_nhap %>
+
+                                </td>
+                                <td>
+                                    <%= bao_cao.so_luong_dang_giao %>
 
                                 </td>
                                 <td>
