--- a/src/resources/views/admin/nhap_kho/add_nhap_kho.ejs
+++ b/src/resources/views/admin/nhap_kho/add_nhap_kho.ejs
@@ -44,9 +44,9 @@
                 <div class="col-md-6">
                     <label for="validationCustom03" class="form-label">Trạng thái</label>
                     <select class="form-control" name="trang_thai" id="trang_thai">
-                        <option value="1"> Chờ thanh toán </option>
+                        <!-- <option value="1"> Chờ thanh toán </option> -->
                         <option value="2"> Đã hoàn thành </option>
-                        <option value="3"> Hủy </option>
+                        <!-- <option value="3"> Hủy </option> -->
                     </select>
                 </div>
             </div>
