--- a/src/resources/views/user/home.ejs
+++ b/src/resources/views/user/home.ejs
@@ -164,7 +164,9 @@
                                 <p colspan="7">Không có dữ liệu</p>
                                 <% } %>
             </div>
-
+            <div class="text-center mt-3">
+                <a class="btn btn-outline-secondary btn-sm" href="/all_product">Xem thêm</a>
+            </div>
             <div class="content mt-5">
                 <h4 class="font-weight">Có thể bạn quan tâm</h4>
                 <div class="content" id="content">
@@ -194,24 +196,29 @@
                     <!-- Nội dung đầy đủ ẩn đi ban đầu -->
                     <div id="fullContent" style="display:none;">
                         <!-- Toàn bộ nội dung dài -->
-                        <p>Lợi ích khi sử dụng laptop là gì? <br>
+                        <p> <span class="font-weight">Lợi ích khi sử dụng laptop là gì? </span><br>
                             So với các sản phẩm điện tử hiện đại và tiện lợi khác, laptop nằm ở trong phân khúc giá cao
                             hơn. Tuy nhiên chúng vẫn thu hút được đông đảo người dùng lựa chọn để đồng hành trong công
                             việc và cuộc sống bởi chúng có những lợi ích nổi bật như sau:<br>
 
-                            Hệ điều hành tối ưu: Hiện nay, các loại laptop được trang bị hệ điều hành phù hợp, được tối
+                            <span class="font-weight">Hệ điều hành tối ưu:</span> Hiện nay, các loại laptop được trang
+                            bị hệ điều hành phù hợp, được tối
                             ưu hiệu quả. Cùng với cấu hình mạnh mẽ, được thiết kế ở nhiều mức độ khác nhau giúp người
                             dùng có thể xử lý mọi công việc.<br>
 
-                            Đầy đủ phụ kiện đi kèm: Các dòng laptop được trang bị đầy đủ bàn phím, chuột và các phụ kiện
+                            <span class="font-weight">Đầy đủ phụ kiện đi kèm:</span> Các dòng laptop được trang bị đầy
+                            đủ bàn phím, chuột và các phụ kiện
                             tiện lợi nhằm mang lại sự thuận tiện, giúp công việc được hoàn thiện một cách nhanh chóng
                             hơn.<br>
 
-                            Dễ dàng nâng cấp: Khi sử dụng laptop, bạn có thể dễ dàng sửa chữa, nâng cấp đơn giản nhằm
+                            <span class="font-weight"> Dễ dàng nâng cấp:</span> Khi sử dụng laptop, bạn có thể dễ dàng
+                            sửa chữa, nâng cấp đơn giản nhằm
                             mang đến hiệu năng vượt trội, đáp ứng tốt quá trình sử dụng.<br>
 
-                            Lưu trữ được nhiều dữ liệu: Các ổ cứng trên laptop thường có dung lượng lớn, nhờ đó bạn có
-                            thể lưu trữ được nhiều dữ liệu một cách nhanh chóng.</p>
+                            <span class="font-weight">Lưu trữ được nhiều dữ liệu:</span> Các ổ cứng trên laptop thường
+                            có dung lượng lớn, nhờ đó bạn có
+                            thể lưu trữ được nhiều dữ liệu một cách nhanh chóng.
+                        </p>
                     </div>
                 </div>
             </div>
