--- a/src/resources/views/user/all_product.ejs
+++ b/src/resources/views/user/all_product.ejs
@@ -2,13 +2,12 @@
     <div class="container" style="margin-top: 20px; margin-bottom: 150px">
         <div class=" mt-2 ">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                 </div>
-                <div class="col-lg-6">
-                    <div>
-                        <form action="/search_product_all_user" id="combined-form" method="get"
-                            class="sidebar-form_1 mx-2">
-                            <div class="input-group mb-3" style="width: 80%;">
+                <div class="col-lg-8">
+                    <div class="text-end">
+                        <form action="/search_product_all_user" id="combined-form" method="get" class="sidebar-form_1">
+                            <div class="input-group mb-3" style="width: 100%;">
                                 <input type="text" name="name" class="form-control" placeholder="Nhập tên"
                                     aria-label="Recipient's username" aria-describedby="button-addon2">
 
@@ -34,15 +33,6 @@
                                                         <% } %>
                                     </select>
                                 </div>
-                                <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i
-                                        class="fa fa-search"></i></button>
-                            </div>
-                        </form>
-                    </div>
-                    <div>
-                        <form action="/searchPrice_product_all_user" id="combined-form" method="get"
-                            class="sidebar-form_1 mx-2">
-                            <div class="input-group mb-3" style="width: 80%;">
                                 <input type="text" name="min_price" class="form-control" placeholder="giá trị từ"
                                     aria-label="Recipient's username" aria-describedby="button-addon2">
                                 <input type="text" name="max_price" class="form-control" placeholder="đến"
@@ -52,6 +42,16 @@
                             </div>
                         </form>
                     </div>
+                    <!-- <div>
+                        <form action="/searchPrice_product_all_user" id="combined-form" method="get"
+                            class="sidebar-form_1 mx-2">
+                            <div class="input-group mb-3" style="width: 80%;">
+
+                                <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i
+                                        class="fa fa-search"></i></button>
+                            </div>
+                        </form>
+                    </div> -->
                 </div>
             </div>
 
@@ -93,6 +93,49 @@
                                     <p colspan="7">Không có dữ liệu</p>
                                     <% } %>
                 </div>
+            </div>
+            <div class="pagination text-end">
+                <% if (pageCount> 1) { %>
+                    <ul>
+                        <% if (currentPage> 1) { %>
+                            <li>
+                                <a href="?page=1">Trang đầu</a>
+                            </li>
+                            <li>
+                                <a href="?page=<%= currentPage - 1 %>"><i class="fa-solid fa-angle-left"></i></a>
+                            </li>
+                            <% } %>
+
+                                <% let startPage=Math.max(1, currentPage - 2); %>
+                                    <% let endPage=Math.min(pageCount, startPage + 4); %>
+
+                                        <% if (startPage> 1) { %>
+                                            <li><span>...</span></li>
+                                            <% } %>
+
+                                                <% for (let i=startPage; i <=endPage; i++) { %>
+                                                    <li>
+                                                        <a href="?page=<%= i %>" <% if (i===currentPage) {
+                                                            %>class="active_page""<% } %>>
+                                                                <%= i %>
+                                                        </a>
+                                                    </li>
+                                                    <% } %>
+
+                                                        <% if (currentPage < pageCount) { %>
+                                                            <% if (endPage < pageCount) { %>
+                                                                <li><span>...</span></li>
+                                                                <% } %>
+                                                                    <li>
+                                                                        <a href="?page=<%= currentPage + 1 %>"><i
+                                                                                class="fa-solid fa-angle-right"></i></a>
+                                                                    </li>
+                                                                    <li>
+                                                                        <a href="?page=<%= pageCount %>">Trang cuối</a>
+                                                                    </li>
+                                                                    <% } %>
+                    </ul>
+                    <% } %>
             </div>
         </div>
     </div>
