--- a/src/resources/views/user/lich_su_mua_hang.ejs
+++ b/src/resources/views/user/lich_su_mua_hang.ejs
@@ -74,7 +74,8 @@
 
                                         </div>
                                         <div class="text-end">
-                                            <a href="#" class="btn btn-outline-success mx-2 mb-3">Mua lại</a>
+                                            <a href="#" onclick="mua_lai_hang(`<%= don_mua_hang_item.id %>`)"
+                                                class="btn btn-outline-success mx-2 mb-3">Mua lại</a>
                                         </div>
                         </div>
                         <% } }); if (!hasActiveOrder) { %>
@@ -89,6 +90,11 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function mua_lai_hang(orderId) {
+            window.location.href = "/mua_lai_hang/" + orderId;
+        }
+    </script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const currentPath = window.location.pathname;
