--- a/src/resources/views/user/dat_hang.ejs
+++ b/src/resources/views/user/dat_hang.ejs
@@ -5,8 +5,8 @@
             <h3 class="text-start mt-3 title2">ĐẶT HÀNG </h3>
             <p> <span class="font-weight">Khách hàng: </span> <span id="ho_ten">
                     <%= user.ho_ten %>
-                </span> <span id="so_dien_thoai">
-                    - sdt: <%= user.so_dien_thoai %>
+                </span> <span>- sdt:</span> <span id="so_dien_thoai">
+                    <%= user.so_dien_thoai %>
                 </span></p>
             <p> <span class="font-weight"> Địa chỉ: </span> <span id="dia_chi">
                     <%= user.dia_chi %>
