--- a/src/resources/views/user/order.ejs
+++ b/src/resources/views/user/order.ejs
@@ -51,7 +51,7 @@
               <% if (don_mua_hang.length> 0) {
                 var hasActiveOrder = false;
                 don_mua_hang.forEach(function(don_mua_hang_item, index) {
-                if (don_mua_hang_item.trang_thai === 1) {
+                if (don_mua_hang_item.trang_thai === 1 && don_mua_hang_item.khach_hang_id == user.id) {
                 hasActiveOrder = true;
                 %>
                 <div class="row">
@@ -108,7 +108,7 @@
             <% if (don_mua_hang.length> 0) {
               var hasActiveOrder = false;
               don_mua_hang.forEach(function(don_mua_hang_item, index) {
-              if (don_mua_hang_item.trang_thai === 2) {
+              if (don_mua_hang_item.trang_thai === 2 && don_mua_hang_item.khach_hang_id == user.id) {
               hasActiveOrder = true;
               %>
               <div class="row">
@@ -159,7 +159,7 @@
             <% if (don_mua_hang.length> 0) {
               var hasActiveOrder = false;
               don_mua_hang.forEach(function(don_mua_hang_item, index) {
-              if (don_mua_hang_item.trang_thai === 3) {
+              if (don_mua_hang_item.trang_thai === 3 && don_mua_hang_item.khach_hang_id == user.id) {
               hasActiveOrder = true;
               %>
               <div class="row">
@@ -208,7 +208,7 @@
             <% if (don_mua_hang.length> 0) {
               var hasActiveOrder = false;
               don_mua_hang.forEach(function(don_mua_hang_item, index) {
-              if (don_mua_hang_item.trang_thai === 4) {
+              if (don_mua_hang_item.trang_thai === 4 && don_mua_hang_item.khach_hang_id == user.id) {
               hasActiveOrder = true;
               %>
               <div class="row">
@@ -261,7 +261,7 @@
             <% if (don_mua_hang.length> 0) {
               var hasActiveOrder = false;
               don_mua_hang.forEach(function(don_mua_hang_item, index) {
-              if (don_mua_hang_item.trang_thai === 6) {
+              if (don_mua_hang_item.trang_thai === 6 && don_mua_hang_item.khach_hang_id == user.id) {
               hasActiveOrder = true;
               %>
               <div class="row">
@@ -292,44 +292,71 @@
                         <%= order.gia_ban %>
                       </p>
                       <div class="text-end">
-                        <button type="button" class="btn btn-outline-primary mx-1" data-bs-toggle="modal"
-                          data-bs-target="#staticBackdrop<%= order.id %>">
-                          Bảo hành
-                        </button>
+                        <% var baoHanhFound=false; %>
+                          <% for (var i=0; i < phieu_bao_hanh.length; i++) { %>
+                            <% var baoHanh=phieu_bao_hanh[i]; %>
+                              <% if (baoHanh.chi_tiet_don_mua_hang_id===order.id) { %>
+                                <% if (baoHanh.trang_thai===4) { %>
+                                  <% baoHanhFound=true; %>
+                                    <button type="button" class="btn btn-outline-success mx-1">
+                                      Đã bảo hành
+                                    </button>
+                                    <% break; %>
+                                      <% } else { %>
+                                        <% baoHanhFound=true; %>
+                                          <button type="button" class="btn btn-outline-warning mx-1">
+                                            Đang bảo hành
+                                          </button>
+                                          <% break; %>
+                                            <% } %>
+                                              <% } %>
+                                                <% } %>
+                                                  <% if (!baoHanhFound) { %>
+                                                    <button type="button" class="btn btn-outline-primary mx-1"
+                                                      data-bs-toggle="modal"
+                                                      data-bs-target="#staticBackdrop<%= order.id %>">
+                                                      Bảo hành
+                                                    </button>
+                                                    <% } %>
 
-                        <div class="modal fade " id="staticBackdrop<%= order.id %>" data-bs-backdrop="static"
-                          data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
-                          aria-hidden="true">
-                          <div class="modal-dialog modal-dialog-scrollable">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="staticBackdropLabel">Bảo hành sản phẩm</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                  aria-label="Close"></button>
-                              </div>
-                              <div class="modal-body">
-                                <form>
-                                  <div class="">
-                                    <label for="" class="form-label">Tên sản phẩm</label>
-                                    <input type="text" class="form-control" id="" name=""
-                                      value="<%= order.ten_san_pham %>" required readonly>
-                                  </div>
-                                  <div class="">
-                                    <label for="validationCustom02" class="form-label">Ghi chú</label>
-                                    <textarea class="form-control" name="ghi_chu_bh<%= order.ten_san_pham %>"
-                                      id="ghi_chu_bh_<%= order.ten_san_pham %>"></textarea>
-                                  </div>
-                                </form>
-                              </div>
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button"
-                                  onclick="luuPhieuBaoHanh('<%= order.id %>', document.getElementById('ghi_chu_bh_<%= order.ten_san_pham %>').value)"
-                                  class="btn btn-primary">Gửi</button>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
+                                                      <div class="modal fade " id="staticBackdrop<%= order.id %>"
+                                                        data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                                                        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                                        <div class="modal-dialog modal-dialog-scrollable">
+                                                          <div class="modal-content">
+                                                            <div class="modal-header">
+                                                              <h5 class="modal-title" id="staticBackdropLabel">Bảo hành
+                                                                sản phẩm
+                                                              </h5>
+                                                              <button type="button" class="btn-close"
+                                                                data-bs-dismiss="modal" aria-label="Close"></button>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                              <form>
+                                                                <div class="">
+                                                                  <label for="" class="form-label">Tên sản phẩm</label>
+                                                                  <input type="text" class="form-control" id="" name=""
+                                                                    value="<%= order.ten_san_pham %>" required readonly>
+                                                                </div>
+                                                                <div class="">
+                                                                  <label for="validationCustom02" class="form-label">Ghi
+                                                                    chú</label>
+                                                                  <textarea class="form-control"
+                                                                    name="ghi_chu_bh<%= order.ten_san_pham %>"
+                                                                    id="ghi_chu_bh_<%= order.ten_san_pham %>"></textarea>
+                                                                </div>
+                                                              </form>
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                              <button type="button" class="btn btn-secondary"
+                                                                data-bs-dismiss="modal">Close</button>
+                                                              <button type="button"
+                                                                onclick="luuPhieuBaoHanh('<%= order.id %>', document.getElementById('ghi_chu_bh_<%= order.ten_san_pham %>').value)"
+                                                                class="btn btn-primary">Gửi</button>
+                                                            </div>
+                                                          </div>
+                                                        </div>
+                                                      </div>
 
                       </div>
                     </div>
@@ -350,7 +377,7 @@
             <% if (don_mua_hang.length> 0) {
               var hasActiveOrder = false;
               don_mua_hang.forEach(function(don_mua_hang_item, index) {
-              if (don_mua_hang_item.trang_thai === 5) {
+              if (don_mua_hang_item.trang_thai === 5 && don_mua_hang_item.khach_hang_id == user.id) {
               hasActiveOrder = true;
               %>
               <div class="row">
